--- a/XiaLM.XfSpeech.SDK/XiaLM.XfSpeech.SDK.csproj
+++ b/XiaLM.XfSpeech.SDK/XiaLM.XfSpeech.SDK.csproj
@@ -57,8 +57,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Lib\msc.dll" />
-    <Content Include="Lib\msc_x64.dll" />
+    <Content Include="Lib\msc.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Lib\msc_x64.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="说明.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
