--- a/XiaLM.XfSpeech.WebApi/XiaLM.XfSpeech.WebApi.csproj
+++ b/XiaLM.XfSpeech.WebApi/XiaLM.XfSpeech.WebApi.csproj
@@ -32,15 +32,22 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="XiaLM.Tool450">
+      <HintPath>..\..\XiaLM.Utility\XiaLM.Tool450\bin\Debug\XiaLM.Tool450.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Model\IatParam.cs" />
+    <Compile Include="Model\IatResult.cs" />
+    <Compile Include="Model\TtsParam.cs" />
+    <Compile Include="SpeechHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
